Update NewspapersTestConfig.java